fixed minor layout issues

--- a/src/styles/asset.css
+++ b/src/styles/asset.css
@@ -6,20 +6,20 @@
     border-radius: 24px;
     background-color: #FEFEFE;
     overflow: hidden;
-    max-width: 450px;
+    width: 450px;
     box-sizing: border-box;
     box-shadow: 30px 25px 30px rgba(0, 0, 0, 0.25);
 }
 
 @media only screen and (max-width: 1024px) {
     .asset-card {
-        max-width: 350px;
+        width: 350px;
     }
 }
 
 @media only screen and (max-width: 480px) {
     .asset-card {
-        max-width: 250px;
+        width: 250px;
     }
 }
 
