--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,6 +3,7 @@
     margin: 10px;
     width: 100%;
     color: transparent;
+    font-size: 12px;
 }
 
 .footer-content {
